# MOSDAC_Agent

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile.api  PRODUCTION_PORTAL_INTEGRATION.md  README.md  backend.md  clean.md  docker-compose.yml  docker-entrypoint.sh  docker_guide.md  docker_samjho.md  docling_process.md  document.md  documentation.md  drup_data.md  drupal_data.md  drupal_ingest.py  drupal_ingestion_samjho.md  eval_baseline.md  eval_raga.md  evaluation_plan.md  fastapi_tutor.md  guardplan.md  guardrails_samjho.md  guide.md  hash.md  hash_detail.md  install.md  instruction.md  instruction_integrate.md  integration_final.md  longcat_openai.py  main.py  manifest_hashing_samjho.md  osindependent.md  plan_offline.md  preprocess.md  production.md  (+8 more)
chat_api/: README.md  __init__.py  answer_cache.py  auth.py  config.py  main.py  models.py  routes.py  service.py  session.py  titler.py
chroma_test_tmp/: chroma.sqlite3
chroma_test_tmp2/: chroma.sqlite3
chroma_test_tmp3/: chroma.sqlite3
deployments/: README.md  generic.env  mosdac.env
docs/: BACKUP_RESTORE.md  MOSDAC_Chatbot_Integration_Guide.md  README.md  docker_guide.md  documentation.md  enhanceToolCall.md  fastapi_tutor.md  instruction (1).md  plan.md  plan_offline.md  setup_raga.md  start_offline.md
graph_rag/: README.md  __init__.py  config.py  health.py  text_features.py
guardrails/: README.md  __init__.py  config.py  decisions.py  pipeline.py  templates.py
guardrails_data/: scope_centroid.npy
mosdac_agent/: __init__.py  agent.py  catalog.py  client.py  config.py  exceptions.py  mcp_server.py  mock_mosdac.py  routes.py  store.py  streamlit_app.py  tools.py
observability/: README.md  __init__.py  metrics.py
prompts/: README.md  system_prompt.txt
scripts/: README.md  build_kg.py  fix-windows-tabby-port.ps1  loadtest.py
static/: README.md  graph-rag-chat-widget.js  mosdac-chat-widget.js  sso-demo.html
tests/: README.md  conftest.py  test_auth.py  test_chain.py  test_chat_api.py  test_chatbot.py  test_chroma.py  test_chroma_store.py  test_conversation_repo.py  test_conversation_summary.py  test_drupal_pipeline_integration.py  test_embeddings.py  test_eval_custom_metrics.py  test_eval_dataset.py  test_eval_harness.py  test_eval_probe.py  test_eval_runner.py  test_eval_scorecard.py  test_eval_stats.py  test_extractor.py  test_formats.py  test_grounding_enforcement.py  test_iterative_chain.py  test_kg_integration.py  test_llm_extractor.py  test_loader.py  test_manifest.py  test_mosdac_agent.py  test_mosdac_integration.py  test_mosdac_mock_server.py  test_mosdac_tools.py  test_neo4j.py  test_ollama_embedder.py  test_ontology.py  test_pipeline.py  test_pipeline_security.py  test_production_hardening.py  (+11 more)
(+109 files in other folders)
